--- a/style.css
+++ b/style.css
@@ -2970,7 +2970,7 @@ figure {
 }
 
 .footer_link ul li a {
-  color: #ffffff;
+  color: #000000;
   font-size: 12px;
   line-height: 20px;
   text-transform: uppercase;
